Fix not displaying previous like on post load
